added some time

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -14,7 +14,10 @@
 
 
         <canvas id="myCanvas" width="500" height="500" style="border: 1px solid black"></canvas>
-        <img id="walk" src="/assets/sprite_sheet.png" alt="slash spritesheet" style="display: none">
+        <h2 id="label1"></h2>
+        <h2 id="label2"></h2>
+        <h2 id="label3"></h2>
+        <h2 id="label4"></h2>
 
     </body>
 </html>
