--- a/hosted/index.html
+++ b/hosted/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 
-
+<title>RunBall</title>
 <script src="/assets/bundle.js"></script>
 <script src="/socket.io/socket.io.js"></script>
+<link rel="stylesheet" type="text/css" href="/style.css" >
 
 </head>
     <body>
@@ -13,11 +14,15 @@
 
 
 
-        <canvas id="myCanvas" width="500" height="500" style="border: 1px solid black"></canvas>
-        <h2 id="label1"></h2>
-        <h2 id="label2"></h2>
-        <h2 id="label3"></h2>
-        <h2 id="label4"></h2>
-
+        <canvas id="myCanvas"></canvas>
+        <div id="IDdiv">
+            <h2 id="NameLabel">You are:</h2>
+            <h2 id="BoostLabel">Boost:</h2>
+            <canvas id="BoostCanvas"></canvas>
+        </div>
+        <div id="TimeandWinningDiv">
+        <h2 id="TimeLabel">Time Remaining:</h2>
+        <h2 id="Timeleftlabel"></h2>
+        </div>
     </body>
 </html>
